--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,11 +4,13 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "birdie-rl"
-version = "0.1.3"
+version = "0.1.4"
 description = "An automated reward modeling and text-processing pipeline for multi-objective training of language models."
 authors = [
     { name = "Sam Blouir", email = "samblouir@gmail.com" },
-    { name = "Jimmy T.H. Smith", email = "jsmith@stanford.edu" }
+    { name = "Jimmy T.H. Smith", email = "jsmith@stanford.edu" },
+    { name = "Antonis Anastasopoulos", email = "antonis@gmu.edu" },
+    { name = "Amarda Shehu", email = "ashehu@gmu.edu" }
 ]
 #license = "Apache-2.0"
 readme = "README.md"           
